--- a/locales/nl.json
+++ b/locales/nl.json
@@ -123,6 +123,8 @@
 		"measure_gust_strength": "Windstootkracht",
 		"measure_humidity": "Relatieve Luchtvochtigheid",
 		"measure_battery": "Batterij",
+		"Measure_Temperature2": "Temperatur2",
+		"Measure_Temperature3": "Temperatur3",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon korte tijd",
       	"measure_radon_longterm": "Radon lange tijd",
