--- a/locales/no.json
+++ b/locales/no.json
@@ -126,6 +126,8 @@
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon korttid",
       	"measure_radon_longterm": "Radon langtid",
+		"measure_temperature2": "Temperatur2",
+		"measure_temperature3": "Temperatur3",
 		"meter_power": "Energimåler",
 		"meter_gas": "Gassmåler",
 		"meter_water": "Vannmåler",
