--- a/locales/de.json
+++ b/locales/de.json
@@ -123,8 +123,9 @@
 		"measure_gust_angle": "Böenrichtung",
 		"measure_humidity": "Relative Luftfeuchtigkeit",
 		"measure_battery": "Batterie",
-		"Measure_Temperature2": "Temperatur2",
-		"Measure_Temperature3": "Temperatur3",
+		"measure_Temperature2": "Temperatur2",
+		"measure_Temperature3": "Temperatur3",
+		"measure_energy": "Energie (GJ)",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon kurzfristig",
       	"measure_radon_longterm": "Radon langfristig",
