--- a/locales/en.json
+++ b/locales/en.json
@@ -123,8 +123,9 @@
 		"measure_gust_angle": "Gust angle",
 		"measure_humidity": "Relative Humidity",
 		"measure_battery": "Battery",
-		"Measure_Temperature2": "Temperature2",
-		"Measure_Temperature3": "Temperature3",
+		"measure_Temperature2": "Temperature2",
+		"measure_Temperature3": "Temperature3",
+		"measure_energy": "Energy (GJ)",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon shorttime",
       	"measure_radon_longterm": "Radon longtime",
