Added the custom temperature capability as sensors as well. Updated translations Fixed bug in translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -123,8 +123,8 @@
 		"measure_gust_angle": "Gust angle",
 		"measure_humidity": "Relative Humidity",
 		"measure_battery": "Battery",
-		"measure_Temperature2": "Temperature2",
-		"measure_Temperature3": "Temperature3",
+		"measure_Temperature2": "Measure Temperature2",
+		"measure_Temperature3": "Measure Temperature3",
 		"measure_energy": "Energy (GJ)",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon shorttime",
