--- a/locales/no.json
+++ b/locales/no.json
@@ -123,12 +123,12 @@
 		"measure_gust_angle": "Vindkast retning",
 		"measure_humidity": "Relativ fuktighet",
 		"measure_battery": "Batteri",
+		"measure_temperature2": "Mål temperatur2",
+		"measure_temperature3": "Mål temperatur3",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon korttid",
       	"measure_radon_longterm": "Radon langtid",
-		"measure_temperature2": "Temperatur2",
-		"measure_temperature3": "Temperatur3",
-		"measure_energy": "Energi (GJ)",
+      	"measure_energy": "Energi (GJ)",
 		"meter_power": "Energimåler",
 		"meter_gas": "Gassmåler",
 		"meter_water": "Vannmåler",
