--- a/locales/nl.json
+++ b/locales/nl.json
@@ -123,8 +123,8 @@
 		"measure_gust_strength": "Windstootkracht",
 		"measure_humidity": "Relatieve Luchtvochtigheid",
 		"measure_battery": "Batterij",
-		"measure_Temperature2": "Temperatur2",
-		"measure_Temperature3": "Temperatur3",
+		"measure_Temperature2": "Gemeten temperatuur2",
+		"measure_Temperature3": "Gemeten temperatuur3",
 		"measure_energy": "Energie (GJ)",
 		"measure_tvoc": "TVOC",
       	"measure_radon": "Radon korte tijd",
